# WAG

./: .gitignore  CMakeLists.txt  README(NOT_IMPLEMENTED).md  README.md  TODO.md  init.bat  init.sh  update.sh
DX12Renderer/: CMakeLists.txt
DX12Renderer/include/: DX12Renderer.hpp
DX12Renderer/src/: DX12Renderer.cpp
TestBed/: CMakeLists.txt
TestBed/src/: entry.c  game.c  game.h  main.cpp
VulkanRenderer/: CMakeLists.txt  Cargo.toml  build.mk  build.rs  generate_definitions.py
VulkanRenderer/include/: VulkanRenderer.hpp
VulkanRenderer/src/: VulkanRenderer.cpp  generated.rs  lib.rs  renderer_interface_bindings.rs
VulkanRenderer/src/vulkan/: mod.rs
WAG/: CMakeLists.txt
WAG/include/: WAG.h  WAG.hpp  defines.h  entry.h  entry.hpp  pp_util.h
WAG/include/WAG/: entry.h
WAG/include/WAG/core/: Application.h  Engine.h  Event.h  Exception.h  FlatAllocator.h  Input.h  Logger.h  MemoryManagement.h  WagTypes.h
WAG/include/WAG/platform/: Platform.h  Platform.hpp
WAG/include/WAG/renderer/: IRenderer.hpp
WAG/include/WAG/util/: Exception.h  filesystem.h  ht.h  lib.h  printf.h  tinyvec.h  wmath.h
WAG/include/core/: logger.h  memory.h
WAG/include/interface/: application.h  renderer.h
WAG/include/platform/: platform.h
WAG/include/util/: allocation_map.h  heap_alloc.h  str.h  wmath.h
WAG/src/: WAG.cpp
WAG/src/WAG/core/: Engine.c  Event.c  FlatAllocator.c  Input.c  Logger.c  MemoryManagement.c
WAG/src/WAG/platform/: Platform.c  PlatformWin32.c  PlatformWin32.cpp
WAG/src/WAG/util/: Event.hpp  filesystem.c  lib.c  math.h  printf.c  tinyvec.c  wmath.c
WAG/src/core/: WAG.c  logger.c  memory.c
WAG/src/platform/: PlatformWin32.c  PlatformX11.c
WAG/src/util/: allocation_map.c  heap_alloc.c  str.c
