cmake_minimum_required(VERSION 3.22)

project(
	DX12Renderer
	LANGUAGES CXX
)

if(MVSC) 
	add_definitions(-D_CRT_SECURE_NO_WARNINGS) #no warnings shit
endif()

file(GLOB_RECURSE SRC_FILES CMAKE_CONFIGURE_DEPENDS
 "${CMAKE_CURRENT_SOURCE_DIR}/src/*"
 "${CMAKE_CURRENT_SOURCE_DIR}/include/*"
)

set(CMAKE_BINARY_DIR "${GLOBAL_BUILD_DIR}/")

add_library(DX12Renderer SHARED ${SRC_FILES})

target_include_directories(DX12Renderer
  PUBLIC
  $<BUILD_INTERFACE:${WAG_INCLUDE_DIR}>
	"${CMAKE_CURRENT_SOURCE_DIR}/include"
	"${CMAKE_CURRENT_SOURCE_DIR}/src"
)

target_compile_definitions(DX12Renderer PRIVATE RENDERER_EXPORTS)

set_target_properties(DX12Renderer PROPERTIES OUTPUT_NAME "DX12Renderer")

set_target_properties(DX12Renderer PROPERTIES
  LIBRARY_OUTPUT_DIRECTORY "${GLOBAL_BUILD_DIR}/"
  RUNTIME_OUTPUT_DIRECTORY "${GLOBAL_BUILD_DIR}/"
  ARCHIVE_OUTPUT_DIRECTORY "${GLOBAL_BUILD_DIR}/"
	DEBUG_OUTPUT_DIRECTORY "${GLOBAL_BUILD_DIR}/"
  PDB_OUTPUT_DIRECTORY "${GLOBAL_BUILD_DIR}/"
)
