[package]
name = "VulkanRenderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
bindgen = "*"

[dependencies]
vulkanalia = { version = "0.25.0", features = ["libloading", "provisional", "window", "raw-window-handle"] }
anyhow = "1"
log = "0.4"
cgmath = "0.18"
png = "0.17"
pretty_env_logger = "0.5"
thiserror = "1"
#tobj = { version = "3", features = ["log"] }
#winit = "0.29"